--- a/.jshintrc
+++ b/.jshintrc
@@ -1,7 +1,7 @@
 {
     "node": true,
     "browser": true,
-    "es5": true,
+    "es5": false,
     "esnext": true,
     "bitwise": true,
     "camelcase": true,
@@ -12,7 +12,7 @@
     "latedef": true,
     "newcap": true,
     "noarg": true,
-    "quotmark": "single",
+    //"quotmark": "single",
     "regexp": true,
     "undef": true,
     "unused": true,
