--- a/bower.json
+++ b/bower.json
@@ -15,7 +15,9 @@
     "require-handlebars-plugin": "~0.4.0",
     "mocha": "~1.12.0",
     "chai": "~1.7.2",
-    "sinon": "~1.7.3"
+    "sinon": "~1.7.3",
+    "backbone-relational": "~0.8.7",
+    "backbone-forms": "~0.14.0"
   },
   "devDependencies": {},
   "directory": "bower_components"
