--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "three-aces",
   "version": "0.0.1",
-  
   "dependencies": {
     "express": "~3.2.4",
     "request": "~2.21.0",
@@ -10,9 +9,9 @@
     "mongoose": "~3.6.11",
     "baucis": "~0.4.6",
     "express-hbs": "~0.2.0",
-    "underscore": "~1.4.4"
+    "underscore": "~1.4.4",
+    "express-resource-new": "~0.1.1"
   },
-  
   "devDependencies": {
     "grunt": "~0.4.1",
     "grunt-contrib-copy": "~0.4.0",
