--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "underscore": "~1.4.4"
   },
   "devDependencies": {
+    "bower": "^0.10.0",
+    "bower-installer": "^0.8.4",
     "glob": "^4.0.6",
     "grunt": "~0.4.1",
     "grunt-bower-requirejs": "~0.4.1",
