--- a/bower.json
+++ b/bower.json
@@ -2,47 +2,32 @@
   "name": "three-aces",
   "version": "0.0.0",
   "dependencies": {
-    "backbone": "~1.1.2",
-    "backbone.babysitter": "~0.0.6",
-    "backbone-forms": "~0.14.0",
-    "backbone.marionette": "~1.0.2",
-    "backbone-relational": "~0.8.7",
-    "backbone.wreqr": "~0.2.0",
-    "bootstrap": "~3.1.1",
-    "jquery": "~1.9.0",
-    "modernizr": "~2.6.2",
-    "sass-bootstrap": "~2.3.0",
-    "require-handlebars-plugin": "~0.4.0",
-    "requirejs": "~2.1.5",
-    "requirejs-text": "~2.0.5",
-    "underscore": "~1.7.0"
+	"backbone": "*",
+	"backbone-forms": "*",
+	"backbone-relational": "*",
+	"backbone.marionette": "*",
+	"bootstrap": "*",
+	"jquery": "*",
+	"modernizr": "*",
+	"requirejs": "*"
   },
   "devDependencies": {
-    "chai": "~1.7.2",
-    "mocha": "~1.12.0",
-    "sinon": "~1.7.3"
+	"chai": "~1.7.2",
+	"mocha": "~1.12.0",
+	"sinon": "~1.7.3"
   },
   "install": {
-    "path": "app/scripts/lib/vendor",
-    "sources": {
-      "backbone-forms": [
-        "bower_components/backbone-forms/distribution/backbone-forms.js",
-        "bower_components/backbone-forms/distribution/templates/bootstrap3.js"
-      ],
-      "backbone.babysitter": "bower_components/backbone.babysitter/lib/backbone.babysitter.js",
-      "backbone.marionette": "bower_components/backbone.marionette/lib/backbone.marionette.js",
-      "backbone.wreqr": "bower_components/backbone.wreqr/lib/backbone.wreqr.js",
-      "bootstrap": "bower_components/bootstrap/dist/js/bootstrap.js",
-      "jquery": "bower_components/jquery/jquery.js",
-      "jquery.migrate": "bower_components/jquery/jquery-migrate.js",
-      "modernizr": "bower_components/modernizr/modernizr.js",
-      "require-handlebars-plugin": [
-    		"bower_components/require-handlebars-plugin/Handlebars.js",
-    		"bower_components/require-handlebars-plugin/hbs.js",
-        "bower_components/require-handlebars-plugin/hbs/i18nprecompile.js",
-    		"bower_components/require-handlebars-plugin/hbs/json2.js"
-      ],
-      "sinon": "bower_components/sinon/lib/sinon.js"
-    }
+	"path": "app/scripts/lib/vendor",
+	"sources": {
+	  "backbone-forms": [
+		"bower_components/backbone-forms/distribution/backbone-forms.js",
+		"bower_components/backbone-forms/distribution/templates/bootstrap3.js"
+	  ],
+	  "backbone.marionette": "bower_components/backbone.marionette/lib/backbone.marionette.js",
+	  "bootstrap": "bower_components/bootstrap/dist/js/bootstrap.js",
+	  "jquery": "bower_components/jquery/dist/jquery.js",
+	  "modernizr": "bower_components/modernizr/modernizr.js",
+	  "sinon": "bower_components/sinon/lib/sinon.js"
+	}
   }
 }
